lib/libstatus.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef _GoString_ GoString;
// OpenAccounts opens database and returns accounts list.

extern char* OpenAccounts(char* p0);
//CallRPC calls public APIs via RPC

extern char* CallRPC(char* p0);
//CallPrivateRPC calls both public and private APIs via RPC

extern char* CallPrivateRPC(char* p0);
//VerifyAccountPassword verifies account password

extern char* VerifyAccountPassword(char* p0, char* p1, char* p2);
//Login loads a key file (for a given address), tries to decrypt it using the password, to verify ownership
// if verified, purges all the previous identities from Whisper, and injects verified key as shh identity

extern char* Login(char* p0, char* p1);
// SaveAccountAndLogin saves account in status-go database..

extern char* SaveAccountAndLogin(char* p0, char* p1, char* p2, char* p3, char* p4);
// InitKeystore initialize keystore before doing any operations with keys.

extern char* InitKeystore(char* p0);
//Logout is equivalent to clearing whisper identities

extern char* Logout();
// SendTransaction converts RPC args and calls backend.SendTransaction

extern char* SendTransaction(char* p0, char* p1);
// HashMessage calculates the hash of a message to be safely signed by the keycard
// The hash is calulcated as
//   keccak256("\x19Ethereum Signed Message:\n"${message length}${message}).
// This gives context to the signed message and prevents signing of transactions.

extern char* HashMessage(char* p0);
// AddPeer adds an enode as a peer.

extern char* AddPeer(char* p0);
// SetSignalEventCallback setup geth callback to notify about new signal

extern void SetSignalEventCallback(void* p0);
// GenerateAlias returns a 3 random name words given the pk string 0x prefixed

extern char* GenerateAlias(GoString p0);
// Identicon returns the base64 identicon

extern char* Identicon(GoString p0);
// MultiAccountGenerateAndDeriveAddresses combines Generate and DeriveAddresses in one call.

extern char* MultiAccountGenerateAndDeriveAddresses(char* p0);
// MultiAccountDeriveAddresses derive addresses from an account selected by ID, without storing them.

extern char* MultiAccountDeriveAddresses(char* p0);
// MultiAccountStoreDerivedAccounts derive accounts from the specified key and store them encrypted with the specified password.

extern char* MultiAccountStoreDerivedAccounts(char* p0);
// MultiAccountImportPrivateKey imports a raw private key without storing it.

extern char* MultiAccountImportPrivateKey(char* p0);
// MultiAccountImportMnemonic imports an account derived from the mnemonic phrase and the Bip39Passphrase storing it.

extern char* MultiAccountImportMnemonic(char* p0);